# meerai

./: .editorconfig  .gitignore  Cargo.toml  config.yml  rustfmt.toml
meerai/: Cargo.toml
meerai-agents/: Cargo.toml
meerai-agents/src/: lib.rs  multi_turn_agent.rs
meerai-common/: Cargo.toml
meerai-common/src/: lib.rs
meerai-common/src/config/: error.rs  mod.rs
meerai-common/src/tools/: mod.rs  stop.rs  stop_with_reason.rs
meerai-core/: Cargo.toml
meerai-core/src/: chat_completion.rs  json_schema.rs  lib.rs  tools.rs
meerai-core/src/agent/: mod.rs  multi_turn_agent.rs
meerai-core/src/chat_completion/: completion.rs  mod.rs
meerai-core/src/providers/: mod.rs
meerai-core/src/providers/gemini/: client.rs  mod.rs
meerai-core/src/providers/openrouter/: client.rs  mod.rs
meerai-macros/: .gitignore  Cargo.toml
meerai-macros/src/: lib.rs  test_utils.rs
meerai-macros/src/tool/: attribute.rs  attribute_tool.rs  common.rs  derive.rs  derive_schema.rs  derive_toolset.rs  mod.rs
meerai-macros/src/tool/snapshots/: meerai_macros__tool__attribute_tool__test__snapshot_attribute_with_params.snap  meerai_macros__tool__attribute_tool__test__snapshot_attribute_without_params.snap  meerai_macros__tool__derive__test__snapshot_derive_with_multiple_params.snap  meerai_macros__tool__derive__test__snapshot_derive_with_param.snap  meerai_macros__tool__derive__test__snapshot_derive_without_param.snap  meerai_macros__tool__derive_schema__test__schema_derive.snap  meerai_macros__tool__derive_toolset__test__snapshot_derive_with_params.snap  meerai_macros__tool__derive_toolset__test__snapshot_derive_without_params.snap
meerai-macros/tests/: attribute_tool_pass.rs  derive_schema_pass.rs  derive_toolset_pass.rs  tool_derive_pass.rs
meerai-swarm/: Cargo.toml
meerai-swarm/src/: lib.rs  log.rs  main.rs
meerai-swarm/src/config/: bluesky.rs  mod.rs  x.rs
meerai-swarm/src/tools/: bluesky.rs  mod.rs  x.rs
meerai-swarm/src/workers/: bluesky.rs
