[package]
name = "meerai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "meerai_core"
path = "src/lib.rs"
doctest = false

[features]
worker = []

[dependencies]
anyhow = { workspace = true }
async-openai = "0.28"
async-trait = { workspace = true }
derive_builder = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "multipart",
] }
schemars = "0.8.22"
secrecy = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_path_to_error = "0.1"
